# gather-utils

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPER_README.md  PROJECT_README.md  README.md  behave.ini  check_env.py  cleanup_secrets.sh  debug_env.py  download_maps.py  findings.md  pyproject.toml  pytest.ini  requirements.txt  test_release0.py
.github/: pull_request_template.md
docs/: findings.md  index.md  mkdocs.yml  user_stories.md
examples/: README.md  analyze_map_file.py  api_authentication.feature  basic_exploration.py  generate_feature_example.sh  portal_extraction.py
features/: README.md  bdd_integration.feature  environment.py  milestone1_portal_functionality.feature  milestone2_portal_explorer_service.feature  milestone3_command_line_interface.feature  milestone4_testing_quality_assurance.feature  milestone5_documentation_examples.feature
reports/: bdd_coverage_data.json  bdd_coverage_report.md  bdd_test_results.txt
tests/: README.md  conftest.py  test_debug_map_objects.py  test_gather_api.py
tools/: README.md  analyze_bdd_features.sh  bdd_backup.py  bdd_comprehensive_analyzer.py  bdd_consolidation.py  bdd_consolidation_phase1.py  bdd_consolidation_phase2.py  bdd_consolidation_phase3.py  bdd_consolidation_phase4.py  bdd_consolidation_phase5.py  bdd_consolidation_phase6.py  bdd_coverage_report.py  bdd_docs_generator.py  bdd_duplication_analyzer.py  bdd_feature_consolidator.py  bdd_feature_reorganizer.py  bdd_feature_template.py  bdd_gap_analysis.py  bdd_scenario_generator.py  bdd_tag_standardizer.py  bdd_test_runner.py  build_docs.py  (+22 more)
(+304 files in other folders)
